bulletin/ads/ads-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ads-app-service
  labels:
    component: ads
    module: app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: ads-app-port
  selector:
    component: ads
    module: app
  type: ClusterIP
