bulletin/ads/ads-db-service.yaml
apiVersion: v1 #headless service
kind: Service
metadata:
  name: ads-db-service
  labels:
    component: ads
    module: db
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    component: ads
    module: db
