bulletin/ads/ads-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ads-app-ingress
  labels:
    component: ads
    module: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: bulletinboard--part-0014.ingress.bud.k8s-train.shoot.canary.k8s-hana.ondemand.com
    http:
      paths: 
      - path: /ads(.*)
        backend:
          serviceName: ads-app-service
          servicePort: ads-app-port #<name-of-ads-port>
